--- a/config.toml
+++ b/config.toml
@@ -230,3 +230,6 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
 #  section = ["HTML", "RSS"]
 #  taxonomy = ["HTML", "RSS"]
 #  taxonomyTerm = ["HTML"]
+
+[blackfriday]
+smartypants = false
