--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/even"]
   path = themes/even
-  url = git@github.com/ygbingo/hugo-theme-even.git
+  url = git@github.com:ygbingo/hugo-theme-even.git
