--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/even"]
-  path = themes/even
+[submodule "themes/seven"]
+  path = themes/seven
   url = git@github.com:ygbingo/hugo-theme-seven.git
